--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script type="text/javascript" src="Jquery/jquery-3.1.1.min.js" ></script>
+    <script type="text/javascript" src="Twitter/Scrapping.js">
+
+    </script>
     <meta charset="utf-8">
     <title>Social network reputation</title>
   </head>
