--- a/index.html
+++ b/index.html
@@ -8,11 +8,8 @@
    <script src="js/GeoJSON.Ajax.js"></script>
    <script src="js/Control.Layers.argsGeoJSON.js"></script>
    <script type="text/javascript" language="javascript" src="nodeJS_App/Data/geodata/contours/regions-2015/01/departements2.geojson"></script>
-
    <script type="text/javascript" language="javascript" src="nodeJS_App/Data/geodata/contours/regions-2015/02/departements2.geojson"></script>
-
    <script type="text/javascript" language="javascript" src="nodeJS_App/Data/geodata/contours/regions-2015/03/departements2.geojson"></script>
-
    <script type="text/javascript" language="javascript" src="nodeJS_App/Data/geodata/contours/regions-2015/04/departements2.geojson"></script>
    <script type="text/javascript" language="javascript" src="nodeJS_App/Data/geodata/contours/regions-2015/05/departements2.geojson"></script>
    <script type="text/javascript" language="javascript" src="nodeJS_App/Data/geodata/contours/regions-2015/06/departements2.geojson"></script>
@@ -23,6 +20,7 @@
    <script type="text/javascript" language="javascript" src="nodeJS_App/Data/geodata/contours/regions-2015/11/departements2.geojson"></script>
    <script type="text/javascript" language="javascript" src="nodeJS_App/Data/geodata/contours/regions-2015/12/departements2.geojson"></script>
    <script type="text/javascript" language="javascript" src="nodeJS_App/Data/geodata/contours/regions-2015/13/departements2.geojson"></script>
+   <script type="text/javascript" language="javascript" src="33.geojson"></script>
 
 
    <title></title>
@@ -42,19 +40,7 @@
    id: 'mapbox.streets',
    accessToken: 'pk.eyJ1IjoibWF4aW1lZGFzaWx2YSIsImEiOiJjajBtZmh0NzEwMDByMzJyengxMm9rcjJzIn0.Y_8ayqiCFwUG-oqdyN7fcg'
  }).addTo(mymap);
-L.geoJSON(regI).addTo(mymap);
-L.geoJSON(regII).addTo(mymap);
-L.geoJSON(regIII).addTo(mymap);
-L.geoJSON(regIV).addTo(mymap);
-L.geoJSON(regV).addTo(mymap);
-L.geoJSON(regVI).addTo(mymap);
-L.geoJSON(regVII).addTo(mymap);
-L.geoJSON(regVIII).addTo(mymap);
-L.geoJSON(regIX).addTo(mymap);
-L.geoJSON(regX).addTo(mymap);
-L.geoJSON(regXI).addTo(mymap);
-L.geoJSON(regXII).addTo(mymap);
-L.geoJSON(regXIII).addTo(mymap);
+L.geoJSON(test).addTo(mymap);
  //L.geoJSON(data).addTo(mymap);
  </script>
 </html>
