--- a/Client_Side/index.html
+++ b/Client_Side/index.html
@@ -32,7 +32,7 @@
 </div>
 
     <div class="  col-md-10">
-        <div class="col-md-1">
+        <div class="col-md-1" onclick="map('region')">
             <div class="col-md-12">
                 <div class="row">
 
@@ -127,7 +127,7 @@
             </div>
         </div>
         <div class="col-md-1">
-            <div class="col-md-12">
+            <div class="col-md-12" onclick="map('departement')">
                 <div class="row">
                     <img src="pictures/LePen.png" alt="LePen.png" />
                     <p>Marine Le Pen  </p>
