--- a/Client_Side/index.html
+++ b/Client_Side/index.html
@@ -32,25 +32,28 @@
 </div>
 
     <div class="  col-md-10">
-        <div class="col-md-1" onclick="map('region')">
+        <div class="col-md-1">
+          <a href="#" onclick="map('everybody')">
             <div class="col-md-12">
                 <div class="row">
-
-
                     <img src="pictures/everybody.png" alt="everybody.png" />
                     <p>Tous les candidats</p>
                 </div>
             </div>
+            </a>
         </div>
         <div class="col-md-1">
+            <a href="#" onclick="map('Poutou')">
             <div class="col-md-12">
                 <div class="row">
                     <img src="pictures/Poutou.png" alt="Poutou.png" />
                     <p>Philippe Poutou</p>
                 </div>
             </div>
+          </a>
         </div>
         <div class="col-md-1">
+            <a href="#" onclick="map('arthaud')">
             <div class="col-md-12">
                 <div class="row">
 
@@ -59,24 +62,30 @@
                     <p>Nathalie Arthaud</p>
                 </div>
             </div>
+          </a>
         </div>
         <div class="col-md-1">
-            <div class="col-md-12">
-                <div class="row">
-                    <img src="pictures/Melenchon.png" alt="Melenchon.png" />
-                    <p>Jean-Luc Mélenchon</p>
-                </div>
-            </div>
+            <a href="#" onclick="map('Melenchon')">
+              <div class="col-md-12">
+                  <div class="row">
+                      <img src="pictures/Melenchon.png" alt="Melenchon.png" />
+                      <p>Jean-Luc Mélenchon</p>
+                  </div>
+              </div>
+            </a>
         </div>
         <div class="col-md-1">
+            <a href="#" onclick="map('Hamon')">
             <div class="col-md-12">
                 <div class="row">
                     <img src="pictures/Hamon.png" alt="hamon.png" />
                     <p>Benoît Hamon</p>
                 </div>
             </div>
+          </a>
         </div>
         <div class="col-md-1">
+            <a href="#" onclick="map('Lassalle')">
             <div class="col-md-12">
                 <div class="row">
 
@@ -85,61 +94,74 @@
                     <p>Jean Lassalle</p>
                 </div>
             </div>
+          </a>
         </div>
         <div class="col-md-1">
+            <a href="#" onclick="map('Macron')">
             <div class="col-md-12">
                 <div class="row">
                     <img src="pictures/Macron.png" alt="Macron.png" />
                     <p>Emmanuel Macron</p>
                 </div>
             </div>
+          </a>
         </div>
         <div class="col-md-1">
+            <a href="#" onclick="map('fillon')">
             <div class="col-md-12">
                 <div class="row">
                     <img src="pictures/Fillon.png" alt="Fillon.png" />
                     <p>François Fillon</p>
                 </div>
             </div>
+          </a>
         </div>
         <div class="col-md-1">
+            <a href="#" onclick="map('dupontAignan')">
             <div class="col-md-12">
                 <div class="row">
                     <img src="pictures/DupontAignan.png" alt="DupontAignan.png" />
                     <p>Nicolas Dupont-Aignan</p>
                 </div>
             </div>
+          </a>
         </div>
         <div class="col-md-1">
+            <a href="#" onclick="map('Asselineau')">
             <div class="col-md-12">
                 <div class="row">
                     <img src="pictures/Asselineau.png" alt="Asselinea.png" />
                     <p>François Asselineau</p>
                 </div>
             </div>
+          </a>
         </div>
         <div class="col-md-1">
+            <a href="#" onclick="map('Cheminade')">
             <div class="col-md-12">
                 <div class="row">
                     <img src="pictures/Cheminade.png" alt="Cheminade.png" />
                     <p>Jacques Cheminade</p>
                 </div>
             </div>
+          </a>
         </div>
         <div class="col-md-1">
-            <div class="col-md-12" onclick="map('departement')">
+            <a href="#" onclick="map('lepen')">
+            <div class="col-md-12">
                 <div class="row">
                     <img src="pictures/LePen.png" alt="LePen.png" />
                     <p>Marine Le Pen  </p>
                 </div>
             </div>
+          </a>
         </div>
     </div>
       </div>
 
     <div class="row">
       <div id="test" class="col-md-4">
-<canvas id="myChart" width="400" height="400"></canvas>
+          <canvas id="resultCanvas" height="200"></canvas>
       </div>
         <div id="mymap" class="col-md-8"></div>
 
